Improved container layout - fixed overlaps and defined borders

--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
 /*body styles */
- body {
+body {
   margin: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
   background-color: #0095c2;
 }
 
 h2 {
-  color: white; 
-  text-align:center;
+  color: white;
+  text-align: center;
 }
 
 /*search-container styles
@@ -24,41 +24,52 @@ h2 {
 /* Style the search box inside the navigation bar */
 .search-container input[type='text'] {
   float: center;
-  padding: 6px;
+  padding: 5px;
   border: none;
   margin-top: 8px;
   margin-right: 5px;
-  font-size: 14
-  px;
+  font-size: 14 px;
+}
+
+.container {
+  width: 100%;
+  padding-left: 20px;
+  padding-top: 50px;
+  min-height: 80vh;
+  border: solid;
 }
 
 .worldmap {
   float: left;
-  width: 30%;
-  height: 300px;
-  background: white;
-  padding: 20px;
+  width: 50%;
+  min-height: 70vh;
+  padding: 5px;
   border: double;
+  background: red;
 }
 
-
-article {
+.information {
   float: left;
-  padding: 20px;
-  width: 70%;
-  background-color: #f1f1f1;
-  height: 300px;
+  width: 40%;
+  min-height: 70vh;
+  padding: 5px;
+  border: double;
+  /*background-color: #f1f1f1;*/
 }
 
-section::after {
+.foodimage {
+  max-width: 150px;
+}
+
+/*section::after {
   content: "";
   display: table;
   clear: both;
-}
+}*/
 
-footer {
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
+.citation {
   color: white;
+  font-size: smaller;
+  float: left;
+  padding-left: 10px;
 }
